--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -6679,8 +6679,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6e110e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_stock_data(df):\n",
+    "    \"\"\"\n",
+    "    Clean and preprocess stock data, adding technical indicators.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Convert index to datetime\n",
+    "        df.index = pd.to_datetime(df.index)\n",
+    "        \n",
+    "        # Remove unnecessary columns\n",
+    "        if \"Dividends\" in df.columns:\n",
+    "            del df[\"Dividends\"]\n",
+    "        if \"Stock Splits\" in df.columns:\n",
+    "            del df[\"Stock Splits\"]\n",
+    "        \n",
+    "        # Initial drop of missing values\n",
+    "        df = df.dropna()\n",
+    "        print(f\"Shape after initial dropna: {df.shape}, NaN count: {df.isna().sum().sum()}\")\n",
+    "        \n",
+    "        # Check if data is sufficient\n",
+    "        if len(df) < 10:  # Reduced minimum rows for testing\n",
+    "            raise ValueError(f\"Insufficient data after initial cleaning: {len(df)} rows.\")\n",
+    "        \n",
+    "        # Add target variable: 1 if tomorrow's close > today's close, else 0\n",
+    "        df[\"Tomorrow\"] = df[\"Close\"].shift(-1)\n",
+    "        df[\"Target\"] = (df[\"Tomorrow\"] > df[\"Close\"]).astype(int)\n",
+    "        df[\"Tomorrow\"] = df[\"Tomorrow\"].fillna(method=\"ffill\")\n",
+    "        df[\"Target\"] = df[\"Target\"].fillna(method=\"ffill\")\n",
+    "        df = df.dropna(subset=[\"Tomorrow\", \"Target\"])\n",
+    "        print(f\"Shape after target addition: {df.shape}, NaN count: {df.isna().sum().sum()}\")\n",
+    "        \n",
+    "        # Add technical indicators with reduced windows\n",
+    "        df[\"RSI_14\"] = RSIIndicator(df[\"Close\"], window=7).rsi()  # Reduced from 14 to 7\n",
+    "        macd = MACD(df[\"Close\"], window_slow=26, window_fast=12, window_sign=9)  # Default MACD windows\n",
+    "        df[\"MACD\"] = macd.macd()\n",
+    "        df[\"MACD_Signal\"] = macd.macd_signal()\n",
+    "        df[\"SMA_10\"] = df[\"Close\"].rolling(window=10).mean()  # Reduced from 20 to 10\n",
+    "        df[\"EMA_10\"] = df[\"Close\"].ewm(span=10, adjust=False).mean()  # Reduced from 20 to 10\n",
+    "        \n",
+    "        # Volume-based features\n",
+    "        df[\"Volume_MA_10\"] = df[\"Volume\"].rolling(window=10).mean()  # Reduced from 20 to 10\n",
+    "        df[\"Volume_Ratio\"] = df[\"Volume\"] / df[\"Volume_MA_10\"].replace(0, np.nan)  # Avoid division by zero\n",
+    "        df[\"Volatility\"] = df[\"Close\"].rolling(window=10).std()  # New feature: volatility\n",
+    "        \n",
+    "        # Fill NaN values with reasonable defaults\n",
+    "        df[\"RSI_14\"] = df[\"RSI_14\"].fillna(50)  # Neutral RSI value\n",
+    "        df[\"MACD\"] = df[\"MACD\"].fillna(0)\n",
+    "        df[\"MACD_Signal\"] = df[\"MACD_Signal\"].fillna(0)\n",
+    "        df[\"SMA_10\"] = df[\"SMA_10\"].fillna(method=\"ffill\").fillna(df[\"Close\"].mean())\n",
+    "        df[\"EMA_10\"] = df[\"EMA_10\"].fillna(method=\"ffill\").fillna(df[\"Close\"].mean())\n",
+    "        df[\"Volume_MA_10\"] = df[\"Volume_MA_10\"].fillna(0)\n",
+    "        df[\"Volume_Ratio\"] = df[\"Volume_Ratio\"].fillna(1.0)  # Neutral ratio\n",
+    "        df[\"Volatility\"] = df[\"Volatility\"].fillna(0)  # Fill NaN volatility with 0\n",
+    "        \n",
+    "        # Final drop of any remaining NaN values\n",
+    "        df = df.dropna()\n",
+    "        print(f\"Shape after adding indicators: {df.shape}, NaN count: {df.isna().sum().sum()}\")\n",
+    "        \n",
+    "        if df.empty:\n",
+    "            raise ValueError(\"DataFrame is empty after adding indicators.\")\n",
+    "        \n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error preprocessing data: {str(e)}\")\n",
+    "        return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "972e6adf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error preprocessing data: Unknown datetime string format, unable to parse: Ticker, at position 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/t2/tk6lkml50qzfgl3s9gkmfkh00000gn/T/ipykernel_54486/658737647.py:7: UserWarning:\n",
+      "\n",
+      "Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Preprocessing failed for RELIANCE.NS. Check data or indicators.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m     processed_data[stock] \u001b[38;5;241m=\u001b[39m processed_df\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPreprocessing failed for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstock\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Check data or indicators.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: Preprocessing failed for RELIANCE.NS. Check data or indicators."
+     ]
+    }
+   ],
+   "source": [
+    "# Preprocess data for each stock (using earliest available data)\n",
+    "processed_data = {}\n",
+    "for stock in stocks:\n",
+    "    processed_df = preprocess_stock_data(stock_data[stock])  # Removed date filter to use all data\n",
+    "    if processed_df is not None:\n",
+    "        processed_data[stock] = processed_df\n",
+    "    else:\n",
+    "        raise ValueError(f\"Preprocessing failed for {stock}. Check data or indicators.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "748a622d",
    "metadata": {},
    "outputs": [],
    "source": []
