data preprocessed visualised

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -348,10 +348,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "71f8d9bb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed data for INFY.NS\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -530,13 +537,424 @@
        "2025-03-27 00:00:00+05:30  1628.134830   14.373838  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "symbol = 'INFY.NS'\n",
+    "print(f\"Preprocessed data for {symbol}\")\n",
+    "data = yf.Ticker(symbol).history(period='6mo')\n",
+    "\n",
+    "processed_data = preprocess_stock(data)\n",
+    "processed_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "48f042fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed data for RELIANCE.NS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>RSI</th>\n",
+       "      <th>MACD</th>\n",
+       "      <th>MACD_Signal</th>\n",
+       "      <th>SMA_20</th>\n",
+       "      <th>EMA_20</th>\n",
+       "      <th>Volatility</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-03-21 00:00:00+05:30</th>\n",
+       "      <td>1275.000000</td>\n",
+       "      <td>1281.000000</td>\n",
+       "      <td>1270.099976</td>\n",
+       "      <td>1276.349976</td>\n",
+       "      <td>21780769</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63.340584</td>\n",
+       "      <td>7.019228</td>\n",
+       "      <td>0.097185</td>\n",
+       "      <td>1225.802509</td>\n",
+       "      <td>1238.828981</td>\n",
+       "      <td>12.919197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-24 00:00:00+05:30</th>\n",
+       "      <td>1291.000000</td>\n",
+       "      <td>1306.000000</td>\n",
+       "      <td>1284.250000</td>\n",
+       "      <td>1302.099976</td>\n",
+       "      <td>20299319</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68.901369</td>\n",
+       "      <td>11.058691</td>\n",
+       "      <td>2.289487</td>\n",
+       "      <td>1229.257507</td>\n",
+       "      <td>1244.854790</td>\n",
+       "      <td>20.629053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-25 00:00:00+05:30</th>\n",
+       "      <td>1307.699951</td>\n",
+       "      <td>1307.699951</td>\n",
+       "      <td>1282.599976</td>\n",
+       "      <td>1285.449951</td>\n",
+       "      <td>13713899</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>62.318847</td>\n",
+       "      <td>12.769281</td>\n",
+       "      <td>4.385446</td>\n",
+       "      <td>1232.122504</td>\n",
+       "      <td>1248.720996</td>\n",
+       "      <td>21.439889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-26 00:00:00+05:30</th>\n",
+       "      <td>1291.000000</td>\n",
+       "      <td>1293.800049</td>\n",
+       "      <td>1268.750000</td>\n",
+       "      <td>1273.050049</td>\n",
+       "      <td>12074747</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57.883692</td>\n",
+       "      <td>12.974801</td>\n",
+       "      <td>6.103317</td>\n",
+       "      <td>1235.047504</td>\n",
+       "      <td>1251.038049</td>\n",
+       "      <td>21.154080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-27 00:00:00+05:30</th>\n",
+       "      <td>1278.150024</td>\n",
+       "      <td>1285.000000</td>\n",
+       "      <td>1271.300049</td>\n",
+       "      <td>1278.199951</td>\n",
+       "      <td>15028056</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59.182953</td>\n",
+       "      <td>13.398779</td>\n",
+       "      <td>7.562409</td>\n",
+       "      <td>1238.757501</td>\n",
+       "      <td>1253.624896</td>\n",
+       "      <td>21.482302</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Open         High          Low        Close  \\\n",
+       "Date                                                                            \n",
+       "2025-03-21 00:00:00+05:30  1275.000000  1281.000000  1270.099976  1276.349976   \n",
+       "2025-03-24 00:00:00+05:30  1291.000000  1306.000000  1284.250000  1302.099976   \n",
+       "2025-03-25 00:00:00+05:30  1307.699951  1307.699951  1282.599976  1285.449951   \n",
+       "2025-03-26 00:00:00+05:30  1291.000000  1293.800049  1268.750000  1273.050049   \n",
+       "2025-03-27 00:00:00+05:30  1278.150024  1285.000000  1271.300049  1278.199951   \n",
+       "\n",
+       "                             Volume  Dividends  Stock Splits  Target  \\\n",
+       "Date                                                                   \n",
+       "2025-03-21 00:00:00+05:30  21780769        0.0           0.0       1   \n",
+       "2025-03-24 00:00:00+05:30  20299319        0.0           0.0       0   \n",
+       "2025-03-25 00:00:00+05:30  13713899        0.0           0.0       0   \n",
+       "2025-03-26 00:00:00+05:30  12074747        0.0           0.0       1   \n",
+       "2025-03-27 00:00:00+05:30  15028056        0.0           0.0       0   \n",
+       "\n",
+       "                                 RSI       MACD  MACD_Signal       SMA_20  \\\n",
+       "Date                                                                        \n",
+       "2025-03-21 00:00:00+05:30  63.340584   7.019228     0.097185  1225.802509   \n",
+       "2025-03-24 00:00:00+05:30  68.901369  11.058691     2.289487  1229.257507   \n",
+       "2025-03-25 00:00:00+05:30  62.318847  12.769281     4.385446  1232.122504   \n",
+       "2025-03-26 00:00:00+05:30  57.883692  12.974801     6.103317  1235.047504   \n",
+       "2025-03-27 00:00:00+05:30  59.182953  13.398779     7.562409  1238.757501   \n",
+       "\n",
+       "                                EMA_20  Volatility  \n",
+       "Date                                                \n",
+       "2025-03-21 00:00:00+05:30  1238.828981   12.919197  \n",
+       "2025-03-24 00:00:00+05:30  1244.854790   20.629053  \n",
+       "2025-03-25 00:00:00+05:30  1248.720996   21.439889  \n",
+       "2025-03-26 00:00:00+05:30  1251.038049   21.154080  \n",
+       "2025-03-27 00:00:00+05:30  1253.624896   21.482302  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symbol = 'RELIANCE.NS'\n",
+    "print(f\"Preprocessed data for {symbol}\")\n",
+    "data = yf.Ticker(symbol).history(period='6mo')\n",
+    "\n",
+    "processed_data = preprocess_stock(data)\n",
+    "processed_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f0b97bc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed data for HDFCBANK.NS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>RSI</th>\n",
+       "      <th>MACD</th>\n",
+       "      <th>MACD_Signal</th>\n",
+       "      <th>SMA_20</th>\n",
+       "      <th>EMA_20</th>\n",
+       "      <th>Volatility</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-03-21 00:00:00+05:30</th>\n",
+       "      <td>1736.447298</td>\n",
+       "      <td>1754.795377</td>\n",
+       "      <td>1736.447298</td>\n",
+       "      <td>1751.086182</td>\n",
+       "      <td>16754132</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>68.958646</td>\n",
+       "      <td>12.001320</td>\n",
+       "      <td>3.699506</td>\n",
+       "      <td>1688.865662</td>\n",
+       "      <td>1698.702642</td>\n",
+       "      <td>31.453970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-24 00:00:00+05:30</th>\n",
+       "      <td>1759.642083</td>\n",
+       "      <td>1784.765720</td>\n",
+       "      <td>1754.350322</td>\n",
+       "      <td>1780.413574</td>\n",
+       "      <td>8696868</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74.081533</td>\n",
+       "      <td>16.946249</td>\n",
+       "      <td>6.348855</td>\n",
+       "      <td>1694.449237</td>\n",
+       "      <td>1706.484635</td>\n",
+       "      <td>38.567797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-25 00:00:00+05:30</th>\n",
+       "      <td>1785.260286</td>\n",
+       "      <td>1823.638017</td>\n",
+       "      <td>1781.897258</td>\n",
+       "      <td>1801.630127</td>\n",
+       "      <td>19550708</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>77.034365</td>\n",
+       "      <td>22.319850</td>\n",
+       "      <td>9.543054</td>\n",
+       "      <td>1700.826581</td>\n",
+       "      <td>1715.546111</td>\n",
+       "      <td>44.949829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-26 00:00:00+05:30</th>\n",
+       "      <td>1805.141525</td>\n",
+       "      <td>1807.614321</td>\n",
+       "      <td>1782.391796</td>\n",
+       "      <td>1786.892334</td>\n",
+       "      <td>12239221</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70.984634</td>\n",
+       "      <td>25.099914</td>\n",
+       "      <td>12.654426</td>\n",
+       "      <td>1707.228656</td>\n",
+       "      <td>1722.340989</td>\n",
+       "      <td>44.093439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-27 00:00:00+05:30</th>\n",
+       "      <td>1780.413538</td>\n",
+       "      <td>1820.967402</td>\n",
+       "      <td>1778.534188</td>\n",
+       "      <td>1805.487671</td>\n",
+       "      <td>20829050</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>73.782338</td>\n",
+       "      <td>28.475377</td>\n",
+       "      <td>15.818616</td>\n",
+       "      <td>1714.300854</td>\n",
+       "      <td>1730.259721</td>\n",
+       "      <td>46.174221</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Open         High          Low        Close  \\\n",
+       "Date                                                                            \n",
+       "2025-03-21 00:00:00+05:30  1736.447298  1754.795377  1736.447298  1751.086182   \n",
+       "2025-03-24 00:00:00+05:30  1759.642083  1784.765720  1754.350322  1780.413574   \n",
+       "2025-03-25 00:00:00+05:30  1785.260286  1823.638017  1781.897258  1801.630127   \n",
+       "2025-03-26 00:00:00+05:30  1805.141525  1807.614321  1782.391796  1786.892334   \n",
+       "2025-03-27 00:00:00+05:30  1780.413538  1820.967402  1778.534188  1805.487671   \n",
+       "\n",
+       "                             Volume  Dividends  Stock Splits  Target  \\\n",
+       "Date                                                                   \n",
+       "2025-03-21 00:00:00+05:30  16754132        0.0           0.0       1   \n",
+       "2025-03-24 00:00:00+05:30   8696868        0.0           0.0       1   \n",
+       "2025-03-25 00:00:00+05:30  19550708        0.0           0.0       0   \n",
+       "2025-03-26 00:00:00+05:30  12239221        0.0           0.0       1   \n",
+       "2025-03-27 00:00:00+05:30  20829050        0.0           0.0       1   \n",
+       "\n",
+       "                                 RSI       MACD  MACD_Signal       SMA_20  \\\n",
+       "Date                                                                        \n",
+       "2025-03-21 00:00:00+05:30  68.958646  12.001320     3.699506  1688.865662   \n",
+       "2025-03-24 00:00:00+05:30  74.081533  16.946249     6.348855  1694.449237   \n",
+       "2025-03-25 00:00:00+05:30  77.034365  22.319850     9.543054  1700.826581   \n",
+       "2025-03-26 00:00:00+05:30  70.984634  25.099914    12.654426  1707.228656   \n",
+       "2025-03-27 00:00:00+05:30  73.782338  28.475377    15.818616  1714.300854   \n",
+       "\n",
+       "                                EMA_20  Volatility  \n",
+       "Date                                                \n",
+       "2025-03-21 00:00:00+05:30  1698.702642   31.453970  \n",
+       "2025-03-24 00:00:00+05:30  1706.484635   38.567797  \n",
+       "2025-03-25 00:00:00+05:30  1715.546111   44.949829  \n",
+       "2025-03-26 00:00:00+05:30  1722.340989   44.093439  \n",
+       "2025-03-27 00:00:00+05:30  1730.259721   46.174221  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symbol = 'HDFCBANK.NS'\n",
+    "print(f\"Preprocessed data for {symbol}\")\n",
     "data = yf.Ticker(symbol).history(period='6mo')\n",
     "\n",
     "processed_data = preprocess_stock(data)\n",
@@ -709,6 +1127,22 @@
     "plt.tight_layout(rect=[0, 0, 1, 0.96])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "899f325b",
+   "metadata": {},
+   "source": [
+    "# MODEL TRAINING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85fd7202",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
