--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1852,8 +1852,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "4430ff3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSI: 0.164\n",
+      "MACD: 0.156\n",
+      "MACD_Signal: 0.171\n",
+      "SMA_20: 0.156\n",
+      "EMA_20: 0.190\n",
+      "Volatility: 0.163\n"
+     ]
+    }
+   ],
+   "source": [
+    "importances = best_model.feature_importances_\n",
+    "features = X.columns\n",
+    "for feat, score in zip(features, importances):\n",
+    "    print(f\"{feat}: {score:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfe357eb",
    "metadata": {},
    "outputs": [],
    "source": []
